# suzubot

./: ..gitignore.~undo-tree~  .Cargo.toml.~undo-tree~  .gitignore  Cargo.toml  schema.sql
src/: #webhook.rs#  .comp_util.rs.~undo-tree~  .errors.rs.~undo-tree~  .id_disp.rs.~undo-tree~  .lib.rs.~undo-tree~  .linkable.rs.~undo-tree~  .log.rs.~undo-tree~  .msgreplication.rs.~undo-tree~  .purge.rs.~undo-tree~  .util.rs.~undo-tree~  .webhook.rs.~undo-tree~  admin.rs  comp_util.rs  emojisteal.rs  errors.rs  init.rs  lib.rs  linkable.rs  log.rs  main.rs  modmail.rs  msgreplication.rs  purge.rs  remind.rs  runtime.rs  utils.rs  webhook.rs
src/errors/: .context.rs.~undo-tree~  .contextualizable.rs.~undo-tree~  .conversions.rs.~undo-tree~  .display_helpers.rs.~undo-tree~  .impl_display.rs.~undo-tree~  contextualizable.rs  conversions.rs  global_handler.rs  impl_display.rs
src/migrations/: mod.rs
src/migrations/sql/: down.sql  up.sql
