[package]
name = "suzubot_ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
regex = "1.9.1"
futures = "0.3.28"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.8"
postgres-types = { version = "0.2.5", features = ["derive", "array-impls"] }
reqwest = "0.11.8"
tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread"] }
eyre = "0.6.8"
thiserror = "1.0.47"
log = "0.4.19"
env_logger = "0.10.0"
async-trait = "0.1.72"
itertools = "0.11.0"
toml = "0.7.6"
serde = "1.0.185"
twilight-cache-inmemory = { version = "0.15.2", features = ["permission-calculator"] }
twilight-interactions = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder", "link", "permission-calculator", "snowflake"] }
twilight-standby = "0.15.2"
twilight-model = "0.15.2"
twilight-http = "0.15.2"
twilight-gateway = "0.15.2"
twilight-mention = "0.15.1"
twilight-validate = "0.15.1"
